# Nova

./: .gitignore  Bug.md  CHANGELOG.md  CONTRIBUTING.md  Default.md  Feature.md  LICENSE  LICENSE.md  README.md  app.py  feedback.db  feedback.html  feedback_db.py  index.html  launch.json  new.py  pyproject.toml  requirements.txt  settings.json  tasks.json
